fix java cmds